--- a/practice/seaborn.ipynb
+++ b/practice/seaborn.ipynb
@@ -874,7 +874,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "sns.set(color_codes=True)"
+    "sns.set(color_codes=True)\n",
+    "sns.set(fontscale=1.0)"
    ],
    "metadata": {
     "collapsed": false,
