added new project

--- a/practice/hypothesis_testing.ipynb
+++ b/practice/hypothesis_testing.ipynb
@@ -18,243 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-11T05:07:51.964106100Z",
-     "start_time": "2024-01-11T05:07:51.951152400Z"
-    }
+    "is_executing": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>respondent</th>\n",
-       "      <th>main_branch</th>\n",
-       "      <th>hobbyist</th>\n",
-       "      <th>age</th>\n",
-       "      <th>age_1st_code</th>\n",
-       "      <th>age_first_code_cut</th>\n",
-       "      <th>comp_freq</th>\n",
-       "      <th>comp_total</th>\n",
-       "      <th>converted_comp</th>\n",
-       "      <th>country</th>\n",
-       "      <th>...</th>\n",
-       "      <th>survey_length</th>\n",
-       "      <th>trans</th>\n",
-       "      <th>undergrad_major</th>\n",
-       "      <th>webframe_desire_next_year</th>\n",
-       "      <th>webframe_worked_with</th>\n",
-       "      <th>welcome_change</th>\n",
-       "      <th>work_week_hrs</th>\n",
-       "      <th>years_code</th>\n",
-       "      <th>years_code_pro</th>\n",
-       "      <th>age_cat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>36.0</td>\n",
-       "      <td>I am not primarily a developer, but I write co...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>adult</td>\n",
-       "      <td>Yearly</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>77556.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Appropriate in length</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Computer science, computer engineering, or sof...</td>\n",
-       "      <td>Express;React.js</td>\n",
-       "      <td>Express;React.js</td>\n",
-       "      <td>Just as welcome now as I felt last year</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>At least 30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>47.0</td>\n",
-       "      <td>I am a developer by profession</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>child</td>\n",
-       "      <td>Yearly</td>\n",
-       "      <td>58000.0</td>\n",
-       "      <td>74970.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Appropriate in length</td>\n",
-       "      <td>No</td>\n",
-       "      <td>A natural science (such as biology, chemistry,...</td>\n",
-       "      <td>Flask;Spring</td>\n",
-       "      <td>Flask;Spring</td>\n",
-       "      <td>Just as welcome now as I felt last year</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>At least 30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>69.0</td>\n",
-       "      <td>I am a developer by profession</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>child</td>\n",
-       "      <td>Yearly</td>\n",
-       "      <td>550000.0</td>\n",
-       "      <td>594539.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Too short</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Computer science, computer engineering, or sof...</td>\n",
-       "      <td>Django;Flask</td>\n",
-       "      <td>Django;Flask</td>\n",
-       "      <td>Just as welcome now as I felt last year</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Under 30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>125.0</td>\n",
-       "      <td>I am not primarily a developer, but I write co...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>adult</td>\n",
-       "      <td>Monthly</td>\n",
-       "      <td>200000.0</td>\n",
-       "      <td>2000000.0</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Appropriate in length</td>\n",
-       "      <td>No</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Just as welcome now as I felt last year</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>At least 30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>147.0</td>\n",
-       "      <td>I am not primarily a developer, but I write co...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>adult</td>\n",
-       "      <td>Yearly</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>37816.0</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Appropriate in length</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Another engineering discipline (such as civil,...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Express;Flask</td>\n",
-       "      <td>Just as welcome now as I felt last year</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Under 30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 63 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   respondent                                        main_branch hobbyist  \\\n",
-       "0        36.0  I am not primarily a developer, but I write co...      Yes   \n",
-       "1        47.0                     I am a developer by profession      Yes   \n",
-       "2        69.0                     I am a developer by profession      Yes   \n",
-       "3       125.0  I am not primarily a developer, but I write co...      Yes   \n",
-       "4       147.0  I am not primarily a developer, but I write co...       No   \n",
-       "\n",
-       "    age  age_1st_code age_first_code_cut comp_freq  comp_total  \\\n",
-       "0  34.0          30.0              adult    Yearly     60000.0   \n",
-       "1  53.0          10.0              child    Yearly     58000.0   \n",
-       "2  25.0          12.0              child    Yearly    550000.0   \n",
-       "3  41.0          30.0              adult   Monthly    200000.0   \n",
-       "4  28.0          15.0              adult    Yearly     50000.0   \n",
-       "\n",
-       "   converted_comp         country  ...          survey_length trans  \\\n",
-       "0         77556.0  United Kingdom  ...  Appropriate in length    No   \n",
-       "1         74970.0  United Kingdom  ...  Appropriate in length    No   \n",
-       "2        594539.0          France  ...              Too short    No   \n",
-       "3       2000000.0   United States  ...  Appropriate in length    No   \n",
-       "4         37816.0          Canada  ...  Appropriate in length    No   \n",
-       "\n",
-       "                                     undergrad_major  \\\n",
-       "0  Computer science, computer engineering, or sof...   \n",
-       "1  A natural science (such as biology, chemistry,...   \n",
-       "2  Computer science, computer engineering, or sof...   \n",
-       "3                                               None   \n",
-       "4  Another engineering discipline (such as civil,...   \n",
-       "\n",
-       "  webframe_desire_next_year webframe_worked_with  \\\n",
-       "0          Express;React.js     Express;React.js   \n",
-       "1              Flask;Spring         Flask;Spring   \n",
-       "2              Django;Flask         Django;Flask   \n",
-       "3                      None                 None   \n",
-       "4                      None        Express;Flask   \n",
-       "\n",
-       "                            welcome_change work_week_hrs years_code  \\\n",
-       "0  Just as welcome now as I felt last year          40.0        4.0   \n",
-       "1  Just as welcome now as I felt last year          40.0       43.0   \n",
-       "2  Just as welcome now as I felt last year          40.0       13.0   \n",
-       "3  Just as welcome now as I felt last year          40.0       11.0   \n",
-       "4  Just as welcome now as I felt last year          40.0        5.0   \n",
-       "\n",
-       "  years_code_pro      age_cat  \n",
-       "0            3.0  At least 30  \n",
-       "1           28.0  At least 30  \n",
-       "2            3.0     Under 30  \n",
-       "3           11.0  At least 30  \n",
-       "4            3.0     Under 30  \n",
-       "\n",
-       "[5 rows x 63 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -586,11 +355,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "401822ba-e978-4724-a3e7-7edc2c8ab4e6",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sample_dem_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate the differences from 2012 to 2016\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m sample_dem_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiff\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43msample_dem_data\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdem_percent_12\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m sample_dem_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdem_percent_16\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Find the mean of the diff column\u001b[39;00m\n\u001b[0;32m      5\u001b[0m xbar_diff \u001b[38;5;241m=\u001b[39m sample_dem_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiff\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sample_dem_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the differences from 2012 to 2016\n",
+    "sample_dem_data['diff'] = sample_dem_data['dem_percent_12'] - sample_dem_data['dem_percent_16']\n",
+    "\n",
+    "# Find the mean of the diff column\n",
+    "xbar_diff = sample_dem_data['diff'].mean()\n",
+    "\n",
+    "# Find the standard deviation of the diff column\n",
+    "s_diff = sample_dem_data['diff'].std()\n",
+    "\n",
+    "# Plot a histogram of diff with 20 bins\n",
+    "sample_dem_data['diff'].hist(bins=20)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e5d48669-26fe-4f64-b905-51523aa641f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pingouin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Conduct a t-test on diff\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m test_results \u001b[38;5;241m=\u001b[39m \u001b[43mpingouin\u001b[49m\u001b[38;5;241m.\u001b[39mttest(x\u001b[38;5;241m=\u001b[39msample_dem_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiff\u001b[39m\u001b[38;5;124m'\u001b[39m], \n\u001b[0;32m      3\u001b[0m                               y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, \n\u001b[0;32m      4\u001b[0m                               alternative\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtwo-sided\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Conduct a paired t-test on dem_percent_12 and dem_percent_16\u001b[39;00m\n\u001b[0;32m      7\u001b[0m paired_test_results \u001b[38;5;241m=\u001b[39m pingouin\u001b[38;5;241m.\u001b[39mttest(x\u001b[38;5;241m=\u001b[39msample_dem_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdem_percent_12\u001b[39m\u001b[38;5;124m'\u001b[39m], \n\u001b[0;32m      8\u001b[0m                                      y\u001b[38;5;241m=\u001b[39msample_dem_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdem_percent_16\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m      9\u001b[0m                                      paired\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     10\u001b[0m                                      alternative\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtwo-sided\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pingouin' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Conduct a t-test on diff\n",
+    "test_results = pingouin.ttest(x=sample_dem_data['diff'], \n",
+    "                              y=0, \n",
+    "                              alternative=\"two-sided\")\n",
+    "\n",
+    "# Conduct a paired t-test on dem_percent_12 and dem_percent_16\n",
+    "paired_test_results = pingouin.ttest(x=sample_dem_data['dem_percent_12'], \n",
+    "                                     y=sample_dem_data['dem_percent_16'],\n",
+    "                                     paired=True,\n",
+    "                                     alternative=\"two-sided\")\n",
+    "                              \n",
+    "# Print the paired test results\n",
+    "print(paired_test_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "967e2d1a-d67c-4ab2-8fe7-fee6f665cbe7",
+   "metadata": {},
+   "source": [
+    "# ANOVA tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a40ebbbc-ab7c-493a-ad2d-d6acf22bb8fd",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate the mean pack_price for each shipment_mode\n",
+    "xbar_pack_by_mode = late_shipments.groupby(\"shipment_mode\")['pack_price'].mean()\n",
+    "\n",
+    "# Calculate the standard deviation of the pack_price for each shipment_mode\n",
+    "s_pack_by_mode = late_shipments.groupby(\"shipment_mode\")['pack_price'].std()\n",
+    "\n",
+    "# Boxplot of shipment_mode vs. pack_price\n",
+    "sns.boxplot(x=\"pack_price\", y=\"shipment_mode\", data=late_shipments)\n",
+    "plt.show()\n",
+    "\n",
+    "# Run an ANOVA for pack_price across shipment_mode\n",
+    "anova_results = pingouin.anova(data=late_shipments,\n",
+    "                               dv=\"pack_price\",\n",
+    "                               between=\"shipment_mode\")\n",
+    "\n",
+    "# Print anova_results\n",
+    "print(anova_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58aacd89-5db7-42f0-8beb-7d49d680e1a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform a pairwise t-test on pack price, grouped by shipment mode\n",
+    "pairwise_results = pingouin.pairwise_tests(data=late_shipments, \n",
+    "                                           dv=\"pack_price\",\n",
+    "                                           between=\"shipment_mode\",\n",
+    "                                           padjust=\"none\")\n",
+    "\n",
+    "# Print pairwise_results\n",
+    "print(pairwise_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de3b27c5-fdb8-46b7-8f16-7ef8d735d5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modify the pairwise t-tests to use Bonferroni p-value adjustment\n",
+    "pairwise_results = pingouin.pairwise_tests(data=late_shipments, \n",
+    "                                           dv=\"pack_price\",\n",
+    "                                           between=\"shipment_mode\",\n",
+    "                                           padjust=\"bonf\")\n",
+    "\n",
+    "# Print pairwise_results\n",
+    "print(pairwise_results)"
+   ]
   }
  ],
  "metadata": {
